[gd_scene load_steps=3 format=2]

[ext_resource path="res://items/DropItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/Rosary.gd" type="Script" id=2]

[node name="Rosary" type="Node2D"]
script = ExtResource( 2 )

[node name="DropItem" parent="." instance=ExtResource( 1 )]
frame = 12

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_Rosary_tree_exiting"]
[connection signal="pickup" from="DropItem" to="." method="_on_DropItem_pickup"]
